-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
markWord::is_unlocked() still uses biased pattern, causes fallback to klass layout
* add more gtest mark word tests
* assert any use of "biased locking" (there are some existing "has_biased_pattern()" asserts not guarded "UseBiasedLocking")
* remove biased_lock_mask_in_place from is_unlocked
* add more gtest mark word tests
* assert any use of "biased locking" (there are some existing "has_biased_pattern()" asserts not guarded "UseBiasedLocking")
* remove biased_lock_mask_in_place from is_unlocked