8255522: [lworld] References to biased pattern remain in markWord::is_unlocked()